# swapsort

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
reference/: vera_main.py
src/: main.py
tests/: sample_sequence_set1.txt  sample_sequence_set1_output.txt  sample_sequence_set2.txt  sample_sequence_set2_output.txt  test_benchmark.py  test_main.py
