[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dna-swapper"
version = "0.1.0"
dependencies = [
]
requires-python = ">=3.10"
authors = [
    { name = "John Do", email = "john.do@example.com" },
]
description = "A tool for swapping DNA sequences."
readme = "README.md"


[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
